# matrix_multiplication

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  main.c.py  matrix.c  utils.c
include/: matrix.h  utils.h
tests/: CMakeLists.txt  test_matrix.c
